--- a/stu/Templates/pages/index.html
+++ b/stu/Templates/pages/index.html
@@ -3,17 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>TodoApp - Create A Todo With Django</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="stylesheet" type="text/css"
+        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <script src="static/script.js"></script>
 </head>
 
 <body>
     <div django-app="TaskManager">
+        <div id="sidebar">
+            <div class="toggle-btn" onclick="toggleSidebar()">
+                &#9776;
+            </div>
+            <ul>
+                <li>Active Tasks </li>
+                <li>Archives</li>
+                <li>Thrash</li>
+            </ul>
+        </div>
         <div class="container">
+            
             <div class="content">
                 <h1>Todo List</h1>
                 <p class="tagline">Django based app</p>
@@ -38,7 +53,7 @@
                                 {{ category.label }}
                             </option>
                             {% endfor %}
-                        
+
                         </select>
                         <label for="category">Label</label>
                     </div>
@@ -54,7 +69,7 @@
                                 {{ category.status }}
                             </option>
                             {% endfor %}
-                        
+
                         </select>
                         <label for="category">Status</label>
                     </div>
@@ -63,7 +78,7 @@
                         <input type="date" id="date" class="taskDate" name="date">
                         <label for="dueDate">Due Date</label>
                     </div>
-                    
+
                     <!-- add and delete button -->
                     <div class="row">
                         <button class="taskAdd" name="taskAdd" type="submit">
