--- a/stu/static/styles.css
+++ b/stu/static/styles.css
@@ -9,7 +9,7 @@ html {
     font-size: 100%;
 }
 body {
-    background: #b1f6cb;
+    background:  #00628B;
     font-family: 'Open Sans',sans-serif;
 }
 /* super basic grid structure */
@@ -155,18 +155,18 @@ button {
     font-size: 20px;
 }
 .taskAdd {
-    background: #444;
+    background:  #81A594;
     padding-left: 31px;
 }
 .taskAdd:hover {
-    background: #303030;
+    background:  rgb(123, 160, 143);
 }
 .taskDelete {
-    background: #e74c3c;
+    background: #dd402f;
     padding-left: 30px;
 }
 .taskDelete:hover {
-    background: #c0392b;
+    background: #cc3e2e;
 }
 /* task styles */
 .taskList {
@@ -205,16 +205,17 @@ button {
 }
 [class*='category-'] {
     display: inline-block;
-    font-size: 10px;
-    background: #444;
+    font-size: 12px;
+    background:  rgb(8, 185, 102);
     vertical-align: middle;
     color: #fff;
     padding: 10px;
-    width: 75px;
+    height: 40px;
+    width: 120px;
     text-align: center;
     border-radius: 2px;
     float: right;
-    font-weight: normal;
+    font-weight: 530;
     text-transform: uppercase;
     margin-right: 20px;
 }
