--- a/stu/static/styles.css
+++ b/stu/static/styles.css
@@ -1,26 +1,33 @@
 /* basic reset */
+
 *, *:before, *:after {
     -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 /* app */
+
 html {
     font-size: 100%;
 }
+
 body {
-    background:  #00628B;
-    font-family: 'Open Sans',sans-serif;
+    background: #2980b9;
+    font-family: 'Open Sans', sans-serif;
 }
+
 /* super basic grid structure */
+
 .container {
     width: 600px;
     margin: 0 auto;
     background: #ffffff;
     padding: 20px 0;
-    -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.2);
-            box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
+
 .row {
     display: block;
     padding: 10px;
@@ -29,14 +36,18 @@ body {
     clear: both;
     overflow: hidden;
 }
+
 .half {
     width: 50%;
     float: left;
 }
+
 .content {
     background: #fff;
 }
+
 /* logo */
+
 h1 {
     font-family: 'Rokkitt', sans-serif;
     color: #666;
@@ -44,6 +55,7 @@ h1 {
     font-weight: 400;
     margin: 0;
 }
+
 .tagline {
     margin-top: -10px;
     text-align: center;
@@ -51,22 +63,27 @@ h1 {
     font-size: 11px;
     font-weight: 600;
     text-transform: uppercase;
-    color: #777; 
+    color: #777;
 }
+
 /* inputs */
+
 .inputContainer {
     height: 60px;
     border-top: 1px solid #e5e5e5;
     position: relative;
     overflow: hidden;
 }
+
 .inputContainer.last {
     border-bottom: 1px solid #e5e5e5;
     margin-bottom: 20px;
 }
+
 .inputContainer.half.last.right {
     border-left: 1px solid #efefef;
 }
+
 input[type="date"], input[type="text"], select {
     height: 100%;
     width: 100%;
@@ -84,44 +101,53 @@ input[type="date"], input[type="text"], select {
     font-weight: 600;
     letter-spacing: 0.5px;
     -webkit-transition: background 0.3s;
-            transition: background 0.3s;
+    transition: background 0.3s;
 }
+
 input[type="date"] {
     cursor: pointer;
 }
+
 input[type="date"]:focus, input[type="text"]:focus, select:focus {
     outline: none;
     background: #ecf0f1;
 }
+
 ::-webkit-input-placeholder {
     color: lightgrey;
     font-weight: normal;
     -webkit-transition: all 0.3s;
-            transition: all 0.3s;
+    transition: all 0.3s;
 }
+
 ::-moz-placeholder {
     color: lightgrey;
     font-weight: normal;
     transition: all 0.3s;
 }
+
 ::-ms-input-placeholder {
     color: lightgrey;
     font-weight: normal;
     transition: all 0.3s;
 }
+
 input:-moz-placeholder {
     color: lightgrey;
     font-weight: normal;
     transition: all 0.3s;
 }
+
 input:focus::-webkit-input-placeholder {
     color: #95a5a6;
     font-weight: bold;
 }
+
 input:focus::-moz-input-placeholder {
     color: #95a5a6;
     font-weight: bold;
 }
+
 .inputContainer label {
     padding: 5px 20px;
     font-size: 11px;
@@ -131,6 +157,7 @@ input:focus::-moz-input-placeholder {
     display: block;
     position: absolute;
 }
+
 button {
     font-family: 'Open Sans', sans-serif;
     background: transparent;
@@ -148,31 +175,39 @@ button {
     padding-left: 30px;
     padding-right: 15px;
 }
+
 .icon {
     position: absolute;
     top: 30%;
     left: 10px;
     font-size: 20px;
 }
+
 .taskAdd {
-    background:  #81A594;
+    background: #81A594;
     padding-left: 31px;
 }
+
 .taskAdd:hover {
-    background:  rgb(123, 160, 143);
+    background: rgb(123, 160, 143);
 }
+
 .taskDelete {
     background: #dd402f;
     padding-left: 30px;
 }
+
 .taskDelete:hover {
     background: #cc3e2e;
 }
+
 /* task styles */
+
 .taskList {
     list-style: none;
     padding: 0 20px;
 }
+
 .taskItem {
     border-top: 1px solid #e5e5e5;
     padding: 15px 0;
@@ -181,16 +216,20 @@ button {
     font-size: 14px;
     letter-spacing: 0.5px;
 }
+
 .taskList .taskItem:nth-child(even) {
     background: #fcfcfc;
 }
+
 .taskCheckbox {
     margin-right: 1em;
 }
+
 .complete-true {
-    text-decoration:  line-through;
+    text-decoration: line-through;
     color: #bebebe;
 }
+
 .taskList .taskDate {
     color: #95a5a6;
     font-size: 10px;
@@ -199,14 +238,16 @@ button {
     display: block;
     margin-left: 41px;
 }
+
 .fa-calendar {
     margin-right: 10px;
     font-size: 16px;
 }
+
 [class*='category-'] {
     display: inline-block;
     font-size: 12px;
-    background:  rgb(8, 185, 102);
+    background: rgb(8, 185, 102);
     vertical-align: middle;
     color: #fff;
     padding: 10px;
@@ -219,24 +260,31 @@ button {
     text-transform: uppercase;
     margin-right: 20px;
 }
+
 .category- {
     background: transparent;
 }
+
 .category-Personal {
     background: #2980b9;
 }
+
 .category-Work {
     background: #8e44ad;
 }
+
 .category-School {
     background: #f39c12;
 }
+
 .category-Cleaning {
     background: #16a085;
 }
+
 .category-Other {
     background: #d35400;
 }
+
 footer {
     text-align: center;
     font-size: 11px;
@@ -244,46 +292,57 @@ footer {
     text-transform: uppercase;
     color: #777;
 }
+
 footer a {
     color: #f39c12;
 }
+
 /* custom checkboxes */
+
 .taskCheckbox {
     -webkit-appearance: none;
-            appearance: none;
+    appearance: none;
     -webkit-transition: all 0.3s;
-            transition: all 0.3s;
+    transition: all 0.3s;
     display: inline-block;
     cursor: pointer;
     width: 19px;
     height: 19px;
     vertical-align: middle;
 }
+
 .taskCheckbox:focus {
     outline: none;
 }
+
 .taskCheckbox:before, .taskCheckbox:checked:before {
     font-family: 'FontAwesome';
     color: #444;
     font-size: 20px;
     -webkit-transition: all 0.3s;
-            transition: all 0.3s;
+    transition: all 0.3s;
 }
+
 .taskCheckbox:before {
     content: '\f096';
 }
+
 .taskCheckbox:checked:before {
     content: '\f14a';
     color: #16a085;
 }
+
 /* custom select menu */
+
 .taskCategory {
     -webkit-appearance: none;
-            appearance: none;
+    appearance: none;
     cursor: pointer;
-    padding-left: 16.5px; /*specific positioning due to difficult behavior of select element*/
+    padding-left: 16.5px;
+    /*specific positioning due to difficult behavior of select element*/
     background: #fff;
 }
+
 .selectArrow {
     position: absolute;
     z-index: 10;
@@ -293,6 +352,7 @@ footer a {
     color: #777;
     pointer-events: none;
 }
+
 .taskCategory option {
     background: #fff;
     border: none;
@@ -300,32 +360,66 @@ footer a {
     padding: 0 100px;
 }
 
-#sidebar{
+#sidebar:hover, #archive:hover {
+    cursor: pointer;
+}
+
+#sidebar {
     position: fixed;
     width: 200px;
     height: 100%;
     background-color: #303030;
-    left:-200px;
+    left: -200px;
     transition-duration: .5s;
-
 }
-#sidebar ul{
+
+#sidebar ul {
     padding: 0;
 }
+
 #sidebar ul li {
-    border-bottom:1px solid rgba(109, 109, 109, 0.2);
-    color: #bebebe ;
+    border-bottom: 1px solid #ffc107;
+    color: #bebebe;
     list-style: none;
-    padding: 15px 10px ;
+    padding: 15px 10px;
 }
-#sidebar.active{
+.gold{
+    background-color: #252206;
+    color: white;
+    
+}
+#sidebar.active {
     left: 0px;
     transition-duration: .5s;
     transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1.5);
+    z-index: 1;
 }
-.toggle-btn{
+
+.toggle-btn {
     position: absolute;
-    left :230px;
-    top:15px;
+    left: 230px;
+    top: 15px;
     font-size: 45px;
+}
+
+.hidden_below {
+    position: fixed;
+    top: 100vh;
+}
+
+#archive_display {
+    width: 600px;
+    margin: 0 auto;
+    height: 100%;
+    background-color: white;
+}
+
+#archive_display.active {
+    top: 20px;
+    transition-duration: .5s;
+    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1.5);
+}
+
+.hide {
+    display: none;
 }
