--- a/stu/static/styles.css
+++ b/stu/static/styles.css
@@ -14,6 +14,7 @@ html {
 
 body {
     background: #2980b9;
+    background-image: linear-gradient(40deg, rgb(87, 27, 156) 0%, rgb(24, 47, 180) 100%);
     font-family: 'Open Sans', sans-serif;
 }
 
