--- a/stu/Templates/pages/index.html
+++ b/stu/Templates/pages/index.html
@@ -43,9 +43,8 @@
                     {% csrf_token %}
                     <!-- csrf token for basic security -->
                     <div class="inputContainer">
-                        <input type="text" id="description" class="taskName" placeholder="Write title of your task"
-                            name="description" required>
-                        <label for="title">Description</label>
+                        <input type="text" id="description" class="form-group" placeholder="Enter Title" name="description" required>
+                        <label for="title">Title</label>
                     </div>
 
                     <!-- label -->
