archive page added

--- a/stu/Templates/pages/indexN.html
+++ b/stu/Templates/pages/indexN.html
@@ -32,7 +32,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="">Home</a></li>
                 <li><a href="/display">Display</a></li>
-                <li><a href="#">Archived</a></li>
+                <li><a href="/archive">Archived</a></li>
               </ul>
               <div class="navbar-header">
                 <a class="navbar-brand" href="#">TodoList</a>
