--- a/stu/Templates/pages/archive.html
+++ b/stu/Templates/pages/archive.html
@@ -26,8 +26,8 @@
             <div class="container-fluid">
               <ul class="nav navbar-nav">
                 <li ><a href="../">Home</a></li>
-                <li class="active"><a href="">Display</a></li>
-                <li><a href="/archive">Archived</a></li>
+                <li ><a href="/display">Display</a></li>
+                <li class='active'><a href="#">Archived</a></li>
               </ul>
               <div class="navbar-header">
                 <a class="navbar-brand" href="#">TodoList</a>
@@ -47,12 +47,16 @@
             <ul class="taskList">
                 {% for todo in todos %}
                 <!-- django template lang - for loop -->
+                {% if todo.archive == True %}
+
                 <li class="taskItem">
                     <input type="checkbox" class="taskCheckbox" name="checkedbox" value="{{ todo.title }}">
                     <label for="{{ todo.title }}"><span class="complete-">{{ todo.title }}</span></label>
                     <span class="category-{{ todo.status }}">{{ todo.status }}</span>
                     <strong class="taskDate"><i class="fa fa-calendar"></i>{{ todo.due_date }}</strong>
                 </li>
+                {% endif%}
+
                 {% endfor %}
             </ul><!-- taskList -->
 
