--- a/stu/Templates/pages/index.html
+++ b/stu/Templates/pages/index.html
@@ -40,66 +40,67 @@
 
                 <form action="" method="post">
                     <div id="input_form">
-                    {% csrf_token %}
-                    <!-- csrf token for basic security -->
-                    <div class="inputContainer">
-                        <input type="text" id="description" class="form-group" placeholder="Enter Title" name="description" required>
-                        <label for="title">Title</label>
-                    </div>
+                        {% csrf_token %}
+                        <!-- csrf token for basic security -->
+                        <div class="inputContainer">
+                            <input type="text" id="description" class="form-group" placeholder="Enter Title"
+                                name="description" required>
+                            <label for="title">Title</label>
+                        </div>
 
-                    <!-- label -->
-                    <div class="inputContainer half last">
-                        <i class="fa fa-caret-down selectArrow"></i>
-                        <select id="category" class="taskCategory" name="label_select">
-                            <option class="disabled" value="">Choose a category label </option>
+                        <!-- label -->
+                        <div class="inputContainer half last">
+                            <i class="fa fa-caret-down selectArrow"></i>
+                            <select id="category" class="taskCategory" name="label_select">
+                                <option class="disabled" value="">Choose a category label </option>
 
-                            {% for category in labelv %}
-                            <option class="" value="{{ category.label }}" name="{{ category.label }}">
-                                {{ category.label }}
-                            </option>
-                            {% endfor %}
+                                {% for category in labelv %}
+                                <option class="" value="{{ category.label }}" name="{{ category.label }}">
+                                    {{ category.label }}
+                                </option>
+                                {% endfor %}
 
-                        </select>
-                        <label for="category">Label</label>
-                    </div>
+                            </select>
+                            <label for="category">Label</label>
+                        </div>
 
-                    <!-- status -->
-                    <div class="inputContainer half right">
-                        <i class="fa fa-caret-down selectArrow"></i>
-                        <select id="category" class="taskCategory" name="status_select">
-                            <option class="disabled" value="">Choose a category label </option>
+                        <!-- status -->
+                        <div class="inputContainer half right">
+                            <i class="fa fa-caret-down selectArrow"></i>
+                            <select id="category" class="taskCategory" name="status_select">
+                                <option class="disabled" value="">Choose a category label </option>
 
-                            {% for category in statusv %}
-                            <option class="" value="{{ category.status }}" name="{{ category.status }}">
-                                {{ category.status }}
-                            </option>
-                            {% endfor %}
+                                {% for category in statusv %}
+                                <option class="" value="{{ category.status }}" name="{{ category.status }}">
+                                    {{ category.status }}
+                                </option>
+                                {% endfor %}
 
-                        </select>
-                        <label for="category">Status</label>
-                    </div>
+                            </select>
+                            <label for="category">Status</label>
+                        </div>
 
-                    <div class="inputContainer half last right">
-                        <input type="date" id="date" class="taskDate" name="date" required>
-                        <label for="dueDate">Due Date</label>
-                    </div>
-                    <!-- add and delete button -->
-                    <div class="button-container">
-                        <button class="mdc-button mdc-button--raised next" name="taskAdd" type="submit">
-                            <div class="mdc-button__ripple"></div>
-                            <span class="mdc-button__label">
-                              ADD
-                            </span>
-                        </button>
-                        <button class="mdc-button cancel" name="taskDelete" formnovalidate="" type="submit"
-                        onclick="$('input#sublist').click();">
-                          <div class="mdc-button__ripple"></div>
-                          <span class="mdc-button__label">
-                            DELETE
-                          </span>
-                        </button>
-                    </div>
-                    <!-- <div class="row">
+                        <div class="inputContainer half last right">
+                            <input type="date" id="date" class="taskDate" name="date" required>
+                            <label for="dueDate">Due Date</label>
+                        </div>
+                        <!-- add and delete button -->
+                        <div class="button-container">
+                            <button class="mdc-button mdc-button--raised next" name="taskAdd" type="submit">
+                                <div class="mdc-button__ripple"></div>
+                                <span class="mdc-button__label">
+                                    ADD
+                                </span>
+                            </button>
+                            <button class="mdc-button cancel" name="taskDelete" formnovalidate="" type="submit"
+                                onclick="$('input#sublist').click();">
+                                <div class="mdc-button__ripple"></div>
+                                <span class="mdc-button__label">
+                                    DELETE
+                                </span>
+                            </button>
+                        </div>
+                        <!-- <div class="row">
                         <button class="taskAdd" name="taskAdd" type="submit">
                             <i class="fa fa-plus icon"></i>Add
                             task</button>
@@ -109,19 +110,19 @@
                             <i class="fa fa-trash-o icon"></i>Delete
                             Tasks</button>
                     </div> -->
-                    <!-- display code  -->
-                    <ul class="taskList">
-                        
-                        {% for todo in todos %}
-                        <!-- django template lang - for loop -->
-                        <li class="taskItem">
-                            <input type="checkbox" class="taskCheckbox" name="checkedbox" value="{{ todo.title }}">
-                            <label for="{{ todo.title }}"><span class="complete-">{{ todo.title }}</span></label>
-                            <span class="category-{{ todo.status }}">{{ todo.status }}</span>
-                            <strong class="taskDate"><i class="fa fa-calendar"></i>{{ todo.due_date }}</strong>
-                        </li>
-                        {% endfor %}
-                    </ul><!-- taskList -->
+                        <!-- display code  -->
+                        <ul class="taskList">
+
+                            {% for todo in todos %}
+                            <!-- django template lang - for loop -->
+                            <li class="taskItem">
+                                <input type="checkbox" class="taskCheckbox" name="checkedbox" value="{{ todo.title }}">
+                                <label for="{{ todo.title }}"><span class="complete-">{{ todo.title }}</span></label>
+                                <span class="category-{{ todo.status }}">{{ todo.status }}</span>
+                                <strong class="taskDate"><i class="fa fa-calendar"></i>{{ todo.due_date }}</strong>
+                            </li>
+                            {% endfor %}
+                        </ul><!-- taskList -->
                     </div>
                     <!-- archive task list  -->
                     <ul id='archive_display' class="taskList hidden_below">
@@ -140,7 +141,7 @@
                         {% endfor %}
                     </ul><!-- archive taskList -->
                 </form>
-                
+
             </div><!-- content -->
         </div><!-- container -->
     </div>
