--- a/stu/Templates/pages/display.html
+++ b/stu/Templates/pages/display.html
@@ -25,13 +25,13 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <ul class="nav navbar-nav">
-                <li ><a href="../">Home</a></li>
+                <li ><a href="../" id="navbar-header">TodoList</a></li>
                 <li class="active"><a href="">Display</a></li>
                 <li><a href="#">Archived</a></li>
               </ul>
-              <div class="navbar-header">
+              <!-- <div class="navbar-header">
                 <a class="navbar-brand" href="#">TodoList</a>
-              </div>
+              </div> -->
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
