--- a/stu/Templates/pages/indexN.html
+++ b/stu/Templates/pages/indexN.html
@@ -30,13 +30,13 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="">Home</a></li>
+                <li class="active" id="navbar-header"><a href="">TodoList</a></li>
                 <li><a href="/display">Display</a></li>
                 <li><a href="#">Archived</a></li>
               </ul>
-              <div class="navbar-header">
+              <!-- <div class=" navbar-header">
                 <a class="navbar-brand" href="#">TodoList</a>
-              </div>
+              </div> -->
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
