--- a/stu/static/styleN.css
+++ b/stu/static/styleN.css
@@ -5,13 +5,14 @@ body {
     /* height: 700px; */
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient(40deg, rgb(100, 35, 168) 0%, rgb(62, 83, 202) 100%);
+    background-image: linear-gradient(45deg, rgb(228, 9, 28) 0%, rgb(60, 44, 212) 60%,rgb(11, 151, 175) 100%);
     font-family: 'Open Sans', sans-serif;
 }
 
 .navbar-header{
     /* position: relative; */
-    left: 70%;
+    /* float:none; */
+    left: 10%;
     text-align: center;
 }
 /* super basic grid structure */
