--- a/stu/Templates/pages/display.html
+++ b/stu/Templates/pages/display.html
@@ -47,12 +47,14 @@
             <ul class="taskList">
                 {% for todo in todos %}
                 <!-- django template lang - for loop -->
-                <li class="taskItem">
-                    <input type="checkbox" class="taskCheckbox" name="checkedbox" value="{{ todo.title }}">
-                    <label for="{{ todo.title }}"><span class="complete-">{{ todo.title }}</span></label>
-                    <span class="category-{{ todo.status }}">{{ todo.status }}</span>
-                    <strong class="taskDate"><i class="fa fa-calendar"></i>{{ todo.due_date }}</strong>
-                </li>
+                  {% if todo.archive == False %}
+                  <li class="taskItem">
+                      <input type="checkbox" class="taskCheckbox" name="checkedbox" value="{{ todo.title }}">
+                      <label for="{{ todo.title }}"><span class="complete-">{{ todo.title }}</span></label>
+                      <span class="category-{{ todo.status }}">{{ todo.status }}</span>
+                      <strong class="taskDate"><i class="fa fa-calendar"></i>{{ todo.due_date }}</strong>
+                  </li>
+                  {% endif %}
                 {% endfor %}
             </ul><!-- taskList -->
 
